--- a/network/backup.yml
+++ b/network/backup.yml
@@ -29,7 +29,7 @@
   tasks:
     - name: Network Backup and Resource Manager
       ansible.builtin.include_role:
-        name: network.backup.run
+        name: network.backup.backup
       vars:  # noqa var-naming[no-role-prefix]
         operation: backup
         type: full
