--- a/network/backup.yml
+++ b/network/backup.yml
@@ -31,12 +31,11 @@
       ansible.builtin.include_role:
         name: network.backup.backup
       vars:  # noqa var-naming[no-role-prefix]
-        operation: backup
         type: full
         data_store:
           local:
             path: "{{ backup_dir }}"
-            filename: "{{ ansible_date_time.date }}_{{ inventory_hostname }}.txt"
+            filename: "{{ inventory_hostname }}.txt"
             
 
     # This task removes the Current configuration... from the top of IOS routers show run
