--- a/network/backup.yml
+++ b/network/backup.yml
@@ -31,6 +31,7 @@
       ansible.builtin.include_role:
         name: network.backup.backup
       vars:  # noqa var-naming[no-role-prefix]
+        operation: backup
         type: full
         data_store:
           local:
