--- a/network/backup.yml
+++ b/network/backup.yml
@@ -37,6 +37,7 @@
           local:
             path: "{{ backup_dir }}"
             filename: "{{ inventory_hostname }}.txt"
+              path: "{{ backup_dir }}"
             
 
     # This task removes the Current configuration... from the top of IOS routers show run
