--- a/network/backup.yml
+++ b/network/backup.yml
@@ -36,7 +36,7 @@
         data_store:
           local:
             path: "{{ backup_dir }}"
-            #filename: "{{ inventory_hostname }}.txt"
+            filename: "{{ inventory_hostname }}.txt"
             
 
     # This task removes the Current configuration... from the top of IOS routers show run
