--- a/network/backup.yml
+++ b/network/backup.yml
@@ -25,6 +25,7 @@
   vars:
     report_server: reports
     backup_dir: "/tmp/network_backups"
+    timestamp: "{{ansible_date_time.date}}"
 
   tasks:
     - name: Network Backup and Resource Manager
