--- a/network/backup.yml
+++ b/network/backup.yml
@@ -51,7 +51,7 @@
     - name: Copy backup file
       delegate_to: "{{ report_server }}"
       ansible.builtin.copy:
-        src: "{{ backup_dir }}/{{ inventory_hostname }}.txt"
+        src: "{{ backup_dir }}/{{ inventory_hostname }}_{{ timestamp}}.txt"
         dest: "/var/www/html/backups/{{ inventory_hostname }}.cfg"
         backup: true
         owner: ec2-user
