--- a/windows/helpdesk_new_user_portal.yml
+++ b/windows/helpdesk_new_user_portal.yml
@@ -28,7 +28,8 @@
         postal_code: "{{ postal_code }}"
         country: US
         attributes:
-          telephoneNumber: "{{ telephone_number }}"
+         set:
+           telephoneNumber: 555-123456
       register: new_user
 
     - name: Display User
